--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule ".tests/scripts"]
 	path = .tests/scripts
-	url = git@github.com:nesfit/IZP.git
+	url = https://github.com/nesfit/IZP.git
 	branch = _test-scripts
 [submodule "solution"]
 	path = solution
 	url = git@github.com:nesfit/IZP-solutions.git
-	branch = master
+	branch = 02-01
